--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,11 @@
-<h1>Home Page</h1>
+
+<div class="container">
+  <h1>Climbing Routes</h1>
+
+  <form class="" action="index.html" method="post">
+    <input type="text" name="name" placeholder="Route Name" >
+    <input type="text" name="grade" placeholder="Grade">
+    <input type="text" name="description" placeholder="Route Description">
+    <input type="button" name="submit" value="Submit">
+  </form>
+</div>
